# cochranblock

./: .env.bak  .env.example  .gitignore  52-days.html  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTORS.md  Cargo.toml  Dockerfile  GITHUB_BANNER.md  MOONSHOT_FRAME.md  NEXT_STEPS.md  OWNERS.yaml  PROOF_OF_ARTIFACTS.md  README.md  TIMELINE_OF_INVENTION.md  amendment-001.html  amendment-002.html  amendment-003.html  amendment-005.html  amendment-006.html  archive.html  build.rs  cochranblock-indexnow-key.txt  constitution.html  darpa-dso-whitepaper.md  darpa-i2o-whitepaper.md  error.rs  govcon-playbook.html  lib.rs  operating-agreement.md  pitch-deck-v2.html  pitch-deck-v3-cofounder.html  recommendation-melissa.md  std_aliases.rs  supplement-msu-2026-04.html
.cargo/: audit.toml  config.toml
.cursor/protocols/: BINARY_STRUCTURE.md
.cursor/rules/: ai-slop-eradication.mdc  anti-patterns.mdc  bad-gateway-check.mdc  ci-pipeline.mdc  git-github.mdc  kaylie-email.mdc  kova.mdc  logo-lock.mdc  no-local-models.mdc  production-binary.mdc  project-separation.mdc  rebuild-deploy.mdc  rebuild-redeploy.mdc  restart-stack.mdc  roguerepo-io.mdc  rough-draft-exopack.mdc  test-binary.mdc  throw-the-book-at-it.mdc  tokenization.mdc  triple-sims.mdc  whyyoulying-commits.mdc  whyyoulying-secret.mdc
.github/workflows/: ci.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/cochranblock/cochranblock/: MainActivity.java
android/app/src/main/res/values/: strings.xml  themes.xml
android/store/: listing.md
approuter/docs/: RAILWAY.md
assets/: 52-days.html  amendment-001.html  amendment-002.html  amendment-003.html  anti-founder.html  archive.html  capability-statement.html  darpa-i2o-whitepaper.md  diamond-profile.toml  john-brief.html  lets-team.html  manifest.json  manifesto.html  manual.html  no-quarter.html  onboarding.html  operating-agreement.html  operating-agreement.md  pitch-deck-tanner.html  pitch-deck-v2.html  pitch-deck.html  railgun-rosetta.html  recommendation-melissa.html  recommendation-melissa.md  resume.html  supplement-msu-2026-04.html
assets/brand/: footer-snippet-light.md  footer-snippet.md  header-snippet.md  repos.tsv
assets/css/: main.css
assets/js/: booking.js  calendar.js  main.js
assets/store/: privacy-policy.html
auth/: password.rs  session.rs
cochranblock/: Cargo.toml
content/: ai_approach.html  ai_orchestration.html  community_grant_intro.txt  executive_summary.html  intake_terms.txt  prompt_reference.html  resume.html  simplify.html  whitepaper_text.txt
content/blog/: linkedin-post.md  show-hn.md  tiny-binary-olympics.md
content/templates/: linkedin-post-shipping.txt  rust-community-post.txt  sblo-email.txt
crypto/: mod.rs
css/: main.css
db/: mod.rs
dns/: mod.rs
docs/: BOOKING_CALENDAR_USER_STORIES.md  BOOKING_FEATURE_GAP_2026_CALENDAR.md  BOOKING_FEATURE_GAP_ANALYSIS.md  BOOKING_UI_UX_ANALYSIS.md  BOOKING_UI_UX_SIMULATION.md  BOOKING_UI_UX_SIMULATION_2026_CALENDAR.md  BOOKING_USER_STORY_2026_CALENDAR.md  BOOKING_USER_STORY_SIMULATION.md  CALENDAR_UI_UX_ANALYSIS.md  COCHRANBLOCK_PLAN.md  COMMUNITY_GRANT_INTAKE.md  FEATURE_GAP_ANALYSIS.md  FEATURE_GAP_ANALYSIS_2026.md  GETTING_ONLINE.md  GO_LIVE.md  INTAKE_UX_ANALYSIS.md  PRICING_MATRIX_ADDENDUM.md  SKILLS_BASED_HIRING_ANALYSIS.md  TEST_WALKTHROUGH.md  TRIPLE_SIMS_AI_ORCHESTRATION.md  TRIPLE_SIMS_COCHRANBLOCK.md  TRIPLE_SIMS_MOBILE_DESKTOP.md  TRIPLE_SIMS_PRODUCT_IMAGES.md  TRIPLE_SIMS_PRODUCT_LINKS.md  TRIPLE_SIMS_STAT.md  TRIPLE_SIMS_THROW_BOOK_DESKTOP.md  TRIPLE_SIMS_THROW_BOOK_MOBILE.md  UI_UX_AUDIT.md  UI_UX_DEVELOPER_PAGES.md  UI_UX_SIMULATION_2025.md  VRE_BUSINESS_PLAN_EXECUTIVE_SUMMARY.md  architecture_guide.md  book.toml
docs/src/: SUMMARY.md  architecture.md  code-style.md  contributing.md  deploy.md  features.md  introduction.md  proof-of-artifacts.md  provenance.md  quick-start.md  routes.md  timeline-of-invention.md
docs/theme/: custom.css  index.hbs
govdocs/: SUPPLY_CHAIN_AUDIT.md
govdocs/sba-rfi-2026-08553/: COVER_SHEET.md  RFI_RESPONSE.md  SUBMIT.md
govdocs/sba-rfi-2026-08553/render/: Cargo.toml
govdocs/sba-rfi-2026-08553/render/src/: main.rs
govdocs/sba-rfi-2026-08554/: COVER_SHEET.md  RFI_RESPONSE.md  SUBMIT.md
js/: booking.js  calendar.js  main.js  sw.js
planning/: BOOKING_CALENDAR_USER_STORIES.md  BOOKING_FEATURE_GAP_2026_CALENDAR.md  BOOKING_UI_UX_SIMULATION.md  BOOKING_UI_UX_SIMULATION_2026_CALENDAR.md  BOOKING_USER_STORY_2026_CALENDAR.md  BOOKING_USER_STORY_SIMULATION.md  COCHRANBLOCK_PLAN.md  FEATURE_GAP_ANALYSIS_2026.md  GETTING_ONLINE.md  INTAKE_UX_ANALYSIS.md  PRICING_MATRIX_ADDENDUM.md  SKILLS_BASED_HIRING_ANALYSIS.md  TEST_WALKTHROUGH.md  TRIPLE_SIMS_MOBILE_DESKTOP.md  TRIPLE_SIMS_THROW_BOOK_DESKTOP.md  UI_UX_DEVELOPER_PAGES.md  UI_UX_SIMULATION_2025.md  VRE_BUSINESS_PLAN_EXECUTIVE_SUMMARY.md
scripts/: brand-stamp.sh  build-monorepo.sh  build-resume-pdf.sh  build_resume.py  deploy.sh  restart-cochranblock.sh  screenshots.sh  setup-railway.sh  setup-via-api.sh
scripts/migrate-to-redb/: Cargo.toml
scripts/migrate-to-redb/src/: main.rs
src/: config.rs  error.rs  lib.rs  logs.rs  screenshot.rs  std_aliases.rs  tunnel.rs
src/android/: mod.rs
src/auth/: mod.rs  password.rs  session.rs
src/crypto/: key.rs  mod.rs  token.rs
src/db/: mod.rs
src/dns/: cloudflare.rs  ip_detect.rs  mod.rs
src/tests/: http.rs  integration.rs  mod.rs  unit.rs
src/ux/: mod.rs
src/web/: assets.rs  booking.rs  captains_log.rs  community_grant.rs  intake.rs  mailer.rs  mod.rs  mw.rs  n_bench.rs  pages.rs  router.rs  subdomain.rs  visits.rs  whyme.rs
tests/: http.rs  mod.rs
web/: assets.rs  community_grant.rs  intake.rs  mod.rs  mw.rs  pages.rs  router.rs
