# Copyright (c) 2026 The Cochran Block. All rights reserved.
[package]
name = "cochranblock"
version = "0.1.0"
edition = "2021"

# tests = rough draft. exopack for quantifiable quality. Release strips both.
# admin = db, auth, sessions, crypto, dns, config. Default = static only.
# dev = developer routes (/dev/source, /dev/rules, etc). Default = off.
# approuter = register with approuter on startup. Release binary only; -test never gets approuter-client.
[features]
default = []
tests = ["exopack", "colored", "admin", "dev"]
admin = []
dev = []
approuter = ["dep:approuter-client"]

[lib]
name = "cochranblock"
path = "src/lib.rs"

# Server binary: serves cochranblock.org. Registers with approuter. Requires --features approuter.
[[bin]]
name = "cochranblock"
path = "src/bin/cochranblock.rs"
required-features = ["approuter"]

# Test binary: full. Tests + self-eval (screenshot). Never gets approuter-client.
[[bin]]
name = "cochranblock-test"
path = "src/bin/cochranblock-test.rs"
required-features = ["tests"]

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.21"
dirs = "5"
hkdf = "0.12"
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie"] }
tower-http = { version = "0.5", features = ["compression-gzip", "compression-deflate", "compression-zstd", "trace", "set-header"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sled = "0.34"
bincode = { version = "2", features = ["serde"] }
zstd = "0.13"
include_packed = "0.1"
mime_guess = "2"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.11", features = ["blocking", "json", "cookies", "rustls-tls"], default-features = false }
sha2 = "0.10"
colored = { version = "2", optional = true }
tempfile = "3"
rand = "0.8"
time = "0.3"
exopack = { git = "https://github.com/cochranblock/exopack", optional = true, features = ["screenshot", "interface", "triple_sims", "devtools"] }
dotenvy = "0.15"
approuter-client = { git = "https://github.com/cochranblock/approuter", optional = true }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.14"
lers = { version = "0.4", features = ["dns-01-cloudflare"] }
openssl = { version = "0.10", features = ["vendored"] }

[build-dependencies]
include_packed = { version = "0.1", features = ["build"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
